--- a/frontend/HairGoApp/package.json
+++ b/frontend/HairGoApp/package.json
@@ -10,12 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
+    "axios": "^1.9.0",
     "expo": "~53.0.11",
     "expo-image-picker": "~16.1.4",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.9.1",
+    "firebase-storage": "^1.1.4",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "^2.25.0",
