--- a/frontend/HairGoApp/package.json
+++ b/frontend/HairGoApp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "axios": "^1.9.0",
@@ -22,10 +23,11 @@
     "firebase-storage": "^1.1.4",
     "react": "19.0.0",
     "react-native": "0.79.3",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "^2.26.0",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
+    "react-native-svg": "^15.12.0",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
