--- a/frontend/HairGoApp/package.json
+++ b/frontend/HairGoApp/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,15 +15,18 @@
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "expo": "~53.0.11",
     "expo-image-picker": "~16.1.4",
+    "expo-location": "~18.1.6",
     "expo-status-bar": "~2.2.3",
     "firebase": "^11.9.1",
     "firebase-storage": "^1.1.4",
+    "geolib": "^3.3.4",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-gesture-handler": "^2.26.0",
+    "react-native-maps": "1.20.1",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
